--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Estilos.css">
+    <link rel="stylesheet" href="EstilosIndex.css">
     <title>Document</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam expedita, 
                 dolor voluptate asperiores reprehenderit iure inventore vitae repudiandae blanditiis commodi, 
                 consectetur, voluptas recusandae a doloribus? Neque repudiandae repellat repellendus veniam!</p>
-                <a href="#">Leer más</a>
+                <a href="#">Ofertas Especiales</a>
             </div>
     
         </div>
@@ -93,4 +93,5 @@
 </script>
 </body>
 </html> 
+
 
