Chamba de la semana

--- a/Index.html
+++ b/Index.html
@@ -15,8 +15,8 @@
                 <li><a href="Consejos.html">Consejos Fitnes </a></li>
                 <li><a href="Maquinaria.html">Como usar el equipo del gym </a></li>
                 <li><a href="Costos.html">Costos </a></li>
-                <li><a href="">Visión & Valores</a></li>
-                <li><a href="#">Contáctanos</a></li>
+                <li><a href="mision-valores.html">Visión & Valores</a></li>
+                <li><a href="Contactanos.html">Contáctanos</a></li>
                 <li> 
             </ul>
         </header>
@@ -91,6 +91,9 @@
     // Auto-avance cada 5 segundos
     setInterval(() => moveSlide(1), 5000);
 </script>
+<footer>
+    <p>© Cach. Todos los derechos reservados.</p>
+</footer>
 </body>
 </html> 
 
