--- a/Maquinaria.html
+++ b/Maquinaria.html
@@ -6,17 +6,5 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Tren Superior</h2>
-    <label for="1">Pres Banca</label>
-    <br>
-    <label for="1">Pres Banca</label>
-    <br>
-    <label for="1">Pres Banca</label>
-    <br>
-    <label for="1">Pres Banca</label>
-    br
-    <label for="1">Pres Banca</label>
-    <label for="1">Pres Banca</label>
-    <h2>Tren Inferiro</h2>
-</body>
+<h1>En Construccion!!!!</h1>
 </html>
