Lo hice responsive, ahora se ve bien en dispositivos moviles y de escritorio

--- a/mision-valores.html
+++ b/mision-valores.html
@@ -22,7 +22,7 @@
                 <h2>Nuestra Misión</h2>
             </div>
             <div class="content-box">
-                <p>En <strong>PowerFit Gym</strong>, nuestra misión es inspirar y guiar a cada miembro hacia su mejor versión a través de un enfoque integral en salud, fitness y bienestar. Buscamos crear una comunidad donde cada persona, sin importar su nivel de condición física, encuentre la motivación, herramientas y apoyo necesario para alcanzar sus metas personales.</p>
+                <p>En <strong>CORONADO GYM</strong>, nuestra misión es inspirar y guiar a cada miembro hacia su mejor versión a través de un enfoque integral en salud, fitness y bienestar. Buscamos crear una comunidad donde cada persona, sin importar su nivel de condición física, encuentre la motivación, herramientas y apoyo necesario para alcanzar sus metas personales.</p>
                 <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Entrenador ayudando a cliente">
             </div>
         </div>
