Primera parte de la implementacion de el menu de la pagina web

--- a/Contactanos.html
+++ b/Contactanos.html
@@ -21,6 +21,6 @@
 <footer>
     <p>© Cach. Todos los derechos reservados.</p>
 </footer>
-
+<script src="FuncionalidadIndex.js"></script>
 </body>
 </html>
