--- a/mision-valores.html
+++ b/mision-valores.html
@@ -9,6 +9,25 @@
 </head>
 <body>
     <header class="hero">
+
+            <a href="#" class="logo">CORONADO GYM</a>
+            
+            <!-- Botón del menú hamburguesa -->
+            <div class="menu-toggle" id="mobile-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            
+            <ul class="navegacion" id="navegacion">
+                <li><a href="#" class="active">Inicio</a></li>
+                <li><a href="Consejos.html">Consejos Fitnes</a></li>
+                <li><a href="Maquinaria.html">Como usar el equipo </a></li>
+                <li><a href="Costos.html">Costos</a></li>
+                <li><a href="mision-valores.html">Visión & Valores</a></li>
+                <li><a href="Contactanos.html">Contáctanos</a></li>
+            </ul>
+
         <div class="hero-content">
             <h1>MISIÓN Y VALORES</h1>
             <p>Nuestro compromiso con tu transformación</p>
@@ -67,5 +86,6 @@
     <footer>
         <p>© Cach. Todos los derechos reservados.</p>
     </footer>
+    <script src="FuncionalidadIndex.js"></script>
 </body>
 </html>
