--- a/Costos.html
+++ b/Costos.html
@@ -59,5 +59,7 @@
     <footer>
         <p>© Cach. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="FuncionalidadIndex.js"></script>
 </body>
 </html>
