--- a/Contactanos.html
+++ b/Contactanos.html
@@ -18,7 +18,7 @@
         </div>
         
         <ul class="navegacion" id="navegacion">
-            <li><a href="#" class="active">Inicio</a></li>
+            <li><a href="Index.html" class="active">Inicio</a></li>
             <li><a href="Consejos.html">Consejos Fitnes</a></li>
             <li><a href="Maquinaria.html">Como usar el equipo </a></li>
             <li><a href="Costos.html">Costos</a></li>
