--- a/Costos.html
+++ b/Costos.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a href="#" class="logo">CORONADO GYM</a>
+        <a href="Index.html" class="logo">CORONADO GYM</a>
         
         <!-- Botón del menú hamburguesa -->
         <div class="menu-toggle" id="mobile-menu">
@@ -19,7 +19,7 @@
         </div>
         
         <ul class="navegacion" id="navegacion">
-            <li><a href="#" class="active">Inicio</a></li>
+            <li><a href="Index.html" class="active">Inicio</a></li>
             <li><a href="Consejos.html">Consejos Fitnes</a></li>
             <li><a href="Maquinaria.html">Como usar el equipo </a></li>
             <li><a href="Costos.html">Costos</a></li>
