--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
             </div>
             
             <ul class="navegacion" id="navegacion">
-                <li><a href="#" class="active">Inicio</a></li>
+                <li><a href="Contador.html" class="active">Contador de calorias</a></li>
                 <li><a href="Consejos.html">Consejos Fitnes</a></li>
                 <li><a href="Maquinaria.html">Como usar el equipo </a></li>
                 <li><a href="Costos.html">Costos</a></li>
