actualizacion de los estilos

--- a/user/nutricion/mediterranea.html
+++ b/user/nutricion/mediterranea.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #ffffff 0%, #ffffff 100%);
             min-height: 100vh;
             padding: 20px;
         }
@@ -32,7 +32,7 @@
             text-align: center;
             margin-bottom: 40px;
             padding: 30px;
-            background: linear-gradient(135deg, #ff6b6b, #ffa726);
+            background: linear-gradient(135deg, #1970db, #26beff);
             border-radius: 15px;
             color: white;
             position: relative;
@@ -77,7 +77,7 @@
         }
 
         .stat-card {
-            background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+            background: linear-gradient(135deg, #072661 0%, #011c5f 100%);
             padding: 25px;
             border-radius: 15px;
             text-align: center;
@@ -124,7 +124,7 @@
         }
 
         .benefits {
-            background: linear-gradient(135deg, #a8edea 0%, #fed6e3 100%);
+            background: linear-gradient(135deg, #ffffff 0%, #ffffff 100%);
             padding: 25px;
             border-radius: 15px;
             margin-bottom: 40px;
@@ -163,7 +163,7 @@
         }
 
         .day-section {
-            background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%);
+            background: linear-gradient(135deg, #58b7ea 0%, #0e99cb 100%);
             padding: 25px;
             border-radius: 15px;
             position: relative;
@@ -177,7 +177,7 @@
             left: 0;
             right: 0;
             height: 5px;
-            background: linear-gradient(90deg, #ff6b6b, #4ecdc4, #45b7d1, #96ceb4, #ffeaa7);
+            background: linear-gradient(90deg, #090b9c, #4ecdc4, #45b7d1, #96ceb4, #062379);
             animation: rainbow 3s infinite;
         }
 
@@ -262,7 +262,7 @@
         }
 
         .tips-section {
-            background: linear-gradient(135deg, #d299c2 0%, #fef9d7 100%);
+            background: linear-gradient(135deg, #05c1fa 0%, #05829e 100%);
             padding: 25px;
             border-radius: 15px;
             margin-top: 40px;
