--- a/user/nutricion/subir.html
+++ b/user/nutricion/subir.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #ffffff 0%, #ffffff 100%);
             min-height: 100vh;
             color: #333;
         }
@@ -55,7 +55,7 @@
         }
 
         .stat-card {
-            background: linear-gradient(135deg, #ff6b6b, #ee5a52);
+            background: linear-gradient(135deg, #073784, #041d70);
             color: white;
             padding: 20px;
             border-radius: 15px;
@@ -143,7 +143,7 @@
         }
 
         .meal-nutrition {
-            background: linear-gradient(135deg, #4ecdc4, #44a08d);
+            background: linear-gradient(135deg, #073784, #44a08d);
             color: white;
             padding: 20px;
             border-radius: 15px;
@@ -202,7 +202,7 @@
         }
 
         .tip-card {
-            background: linear-gradient(135deg, #f093fb, #f5576c);
+            background: linear-gradient(135deg, #073784, #073784);
             color: white;
             padding: 25px;
             border-radius: 15px;
